add data processing to separate script

--- a/EDA.Rmd
+++ b/EDA.Rmd
@@ -13,28 +13,13 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r warning=FALSE,message=FALSE}
 library(dplyr)
 library(ggplot2)
-```
-
-
-```{r}
-load("C:/Stanford/Au23/Stats209/final/dlexpdata.rdata")
-load("C:/Stanford/Au23/Stats209/final/densities.rdata")
+source('dataProcessing.R')
 ```
 
 ```{r}
-# should we include is not sure inside this?
-dlexpdata$response <- NA
-dlexpdata$response[dlexpdata$agree == "Approve strongly"] <- 2
-dlexpdata$response[dlexpdata$agree == "Approve somewhat"] <- 1
-dlexpdata$response[dlexpdata$agree == "Neither approve nor disapprove"] <- 0
-dlexpdata$response[dlexpdata$agree == "Disapprove somewhat"] <- -1
-dlexpdata$response[dlexpdata$agree == "Disapprove strongly"] <- -2
-
-
-dlexp <- filter(dlexpdata, !is.na(response))
-dlexp$female = factor(dlexp$female)
-dlexp$white = factor(dlexp$white)
+dlexp = loadData()
 ```
+
 
 ```{r}
 # start of with plots displaying Z and Y, not including X
@@ -47,7 +32,6 @@ ggplot(data=dlexp, aes(x=response)) +
         party.cues = party_cue_names,
         video = del_cue_names
     ))
-
 
 ```
 
@@ -68,7 +52,6 @@ party_hist = function(pid){
 party_hist(1)
 party_hist(2)
 party_hist(3)
-
 ```
 
 ```{r}
@@ -85,7 +68,6 @@ hist_factor = function(binary_var, var_names){
 
 hist_factor("female", female_names)
 hist_factor("white", white_names)
-
 ```
 
 
@@ -93,20 +75,10 @@ hist_factor("white", white_names)
 dlexp %>% 
    group_by(across(all_of(c("video","party.cues")))) %>% 
    summarize(mean_response = mean(response))
-
 ```
 
 
 ```{r}
-dlexp$age_bucket <- NULL
-dlexp$age_bucket[dlexp$age < 30] <- "18_29"
-dlexp$age_bucket[dlexp$age %in% 30:39] <- "30_39"
-dlexp$age_bucket[dlexp$age %in% 40:49] <- "40_49"
-dlexp$age_bucket[dlexp$age %in% 50:59] <- "50_59"
-dlexp$age_bucket[dlexp$age %in% 60:69] <- "60_69"
-dlexp$age_bucket[dlexp$age >= 70] <- "70+"
-
-
 dlexp %>% 
    group_by(across(all_of(c("age_bucket", "video")))) %>% 
    summarize(mean_response=mean(response), cnt = n())
@@ -115,25 +87,12 @@ dlexp %>%
 See how video does not affect opinion of age group 40-49 as much as others. This is not surprising ...
 
 ```{r}
-dlexp$income_bucket <- NULL
-dlexp$income_bucket[dlexp$income <= 5] <- "0_5"
-dlexp$income_bucket[dlexp$income %in% 6:10] <- "6_10"
-dlexp$income_bucket[dlexp$income %in% 11:15] <- "11_15"
-dlexp$income_bucket[dlexp$income > 15] <- "16+"
-
 dlexp %>% 
    group_by(across(all_of(c("income_bucket", "video")))) %>% 
    summarize(mean_response=mean(response), cnt = n())
 ```
 
 ```{r}
-# classification from code_supp.R
-dlexp$educ4 <- NULL
-dlexp$educ4[dlexp$educ == 1 | dlexp$educ == 2] <- 1 # high school
-dlexp$educ4[dlexp$educ == 3 | dlexp$educ == 4] <- 2 # some college
-dlexp$educ4[dlexp$educ == 5] <- 3 # 4-year college degree
-dlexp$educ4[dlexp$educ == 6] <- 4 # graduate degree
-
 dlexp %>% 
    group_by(across(all_of(c("educ4", "video")))) %>% 
    summarize(mean_response=mean(response), cnt = n())
