--- a/EDA.Rmd
+++ b/EDA.Rmd
@@ -13,6 +13,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r warning=FALSE,message=FALSE}
 library(dplyr)
 library(ggplot2)
+library(tidyr)
 source('dataProcessing.R')
 ```
 
@@ -54,6 +55,8 @@ party_hist(2)
 party_hist(3)
 ```
 
+
+
 ```{r}
 del_cue_names = c('0' = "No Video", '1' = "Video")
 female_names = c('0' = "Male", '1' = "Female")
@@ -70,17 +73,91 @@ hist_factor("female", female_names)
 hist_factor("white", white_names)
 ```
 
-```{r}
-dlexp %>% 
+```{r warning=FALSE,message=FALSE}
+# include this plot
+
+dat = dlexp %>% 
    filter(party.cues == 1) %>%
-   group_by(across(all_of(c("pol_party","video")))) %>%
-   summarize(cnt = n())
+   group_by(across(all_of(c("pid3", "Z", "Y")))) %>%
+   summarize(Frequency = n())
 
-# we have imbalance in political parties, howerver not imbalance between number of treated/ctrl for each party
-# how to treat NA
+dat$Z = as.factor(dat$Z)
 
-# california is roughly split 65-35 dem rep, while for the general population of the US is closer to 50-50
+
+party_bar = function(pid){
+  dat_ = filter(dat, pid3 == pid)
+  ggplot(data=dat_, aes(x=Y, y=Frequency, fill=Z)) +
+    geom_bar(stat="identity",  position="dodge", colour = "black") + ggtitle(party_names[pid])
+  
+}
+
+
+party_bar(1)
+party_bar(2)
+party_bar(3)
 ```
+
+
+```{r warning=FALSE,message=FALSE}
+datInc = dlexp %>% 
+   filter(party.cues == 1) %>%
+   group_by(across(all_of(c("pid3", "incomeQuant", "Z", "Y")))) %>%
+   summarize(Frequency = n())
+
+datInc$Z = as.factor(datInc$Z)
+
+income_plot = function(pid){
+  dat = filter(datInc, pid3 == pid)
+  ggplot(data=dat, aes(x=Y, y=Frequency, fill=Z)) + 
+    geom_bar(stat="identity",  position="dodge", colour = "black") + facet_wrap(~incomeQuant, scales = "free") + ggtitle(party_names[pid])
+  
+}
+
+income_plot(1)
+income_plot(2)
+income_plot(3)
+```
+
+```{r warning=FALSE,message=FALSE}
+datEduc = dlexp %>% 
+   filter(party.cues == 1) %>%
+   group_by(across(all_of(c("pid3", "educationLevel", "Z", "Y")))) %>%
+   summarize(Frequency = n())
+
+datEduc$Z = as.factor(datEduc$Z)
+
+educ_plot = function(pid){
+  dat = filter(datEduc, pid3 == pid)
+  
+  # maintain order of education - high school, college, ....
+  dat = transform(dat,
+      educationLevel=factor(educationLevel,levels=c("High School","Some College Experience","4-Year College Degree", "Graduate Degree")))
+
+  ggplot(data = dat,
+      aes(x=Y, y=Frequency, fill=Z)) + geom_bar(stat="identity",  position="dodge", colour = "black") +
+    facet_wrap(~educationLevel, scales = "free") +
+    ggtitle(party_names[pid])
+    
+  
+}
+
+educ_plot(1)
+educ_plot(2)
+educ_plot(3)
+```
+
+```{r}
+# Education-Income Correlation
+
+dat = transform(dlexp,
+      educationLevel=factor(educationLevel,levels=c("High School","Some College Experience","4-Year College Degree", "Graduate Degree")))
+ggplot(aes(y = income, x = educationLevel), data = dat) + 
+geom_boxplot(aes(fill=educationLevel)) + theme(axis.title.x=element_blank(),
+        axis.text.x=element_blank(),
+        axis.ticks.x=element_blank())
+
+```
+
 
 
 ```{r}
@@ -99,8 +176,8 @@ dlexp %>%
 See how video does not affect opinion of age group 40-49 as much as others. This is not surprising ...
 
 ```{r}
-dlexp %>% 
-   group_by(across(all_of(c("income_bucket", "video")))) %>% 
+dd = dlexp %>% 
+   group_by(across(all_of(c("income_bucket", "video", "pol_party")))) %>% 
    summarize(mean_response=mean(response), cnt = n())
 ```
 
@@ -111,10 +188,4 @@ dlexp %>%
 ```
 
 Again, notice how video does not seem to effect the "middleground" group as much as others.
-
-```{r}
-dlexp %>% 
-   group_by(across(all_of(c("video", "response")))) %>% 
-   summarize(cnt = n())
-```
 
