--- a/Inference.Rmd
+++ b/Inference.Rmd
@@ -147,6 +147,7 @@ geom_errorbar(aes(ymin = ci_lower, ymax = ci_upper)) +
 
 
 ```{r}
+# WE WILL NOT INCLUDE THIS
 # Run post-stratification with political parties as strata
 # only including those who have seen the party clue(more relevant) - we could frame our "research question" as: Does knowing the conclusion from a minipublic have an effect on .... if
 # party stance on the issue/policy is known to the individual .... No?
@@ -199,6 +200,7 @@ print(ci(tau_hat_s, v_hat_s))
 ```
 
 ```{r}
+# this is crap, dont use!
 # start with simple lins estimator
 # need to check linearity assumptions later to verify validity of linear lins
 
@@ -223,32 +225,17 @@ linsEst(2)
 linsEst(3)
 
 # linearity assumpitons do not hold, do random forest instead
-
 ```
 
-```{r}
-df = filter(dParty, Z == 1)
-Y = as.factor(df$Y)
-Z = df$Z
-X = model.matrix(~ income + educ4 + age + white + factor(pid3), data = df) %>% scale(center = T, scale=F)
-df = cbind(Z, data.frame(X), Y)
-
-
-# use random forest regression or classification?
-# analyzed as regression, is classification for now
-model = randomForest(Y ~ ., data = df)
-pred = predict(model, df)
-
-confmatTrain = table(pred, df$Y)
-print(confmatTrain)
-```
 
 ```{r}
+# begin Lin's here
+
 dParty$white = as.numeric(dParty$white)
 dParty$Y_factor = as.factor(dParty$Y)
 df = filter(dParty, pid3 == 1)
 
-
+# shift by centering of other data
 centerVars = function(dataCenter, dataShift){
   vars = c("income", "educ4", "age", "white") # covariates to shift
   data_ = dataShift
@@ -263,20 +250,18 @@ centerVars = function(dataCenter, dataShift){
 
 
 ```{r}
-# do on entire data first
+# Generalized Lin's Estimator with random forest model
 
-# one issue: Using classification to predict and then interpret as continuous??
+# Using classification to predict and then interpret as continuous??
 trainModel = function(data){
   model = randomForest(Y_factor ~ income + educ4 + age + white, data = data)
   return (model)
 }
 
-# calibrate on left out data
-
 # predict for x
 # training data: data that model was trained on
 predict_calibrate_cross = function(model,  x, leftout_data, training_data){
-  # shift left out data based on centering for training data
+  # shift left-out data based on centering for training data
   x_shifted = centerVars(training_data, x)
   leftout_data_shifted = centerVars(training_data, leftout_data)
     
@@ -292,7 +277,7 @@ predict_calibrate_cross = function(model,  x, leftout_data, training_data){
 
 
 # t_data: training data
-# l_data: left out data
+# l_data: left-out data
 tau_pred_cross = function(control_model, treatment_model,
                           control_t_data, treatment_t_data,
                           control_l_data, treatment_l_data){
@@ -317,17 +302,18 @@ t_pred_cross_total = function(control_model_1, control_model_2,
   n = n_1 + n_2
   
   t_out = (tau_pred_cross(control_model_2, treatment_model_2,
-                          control_data_1, treatment_data_1,
-                          control_data_2, treatment_data_2)*(n_1/n)) +
-    (tau_pred_cross(control_model_2, treatment_model_2,
-                    control_data_2, treatment_data_2,
-                    control_data_1, treatment_data_1)*(n_2/n))
+                          control_data_2, treatment_data_2,
+                          control_data_1, treatment_data_1)*(n_1/n)) +
+    (tau_pred_cross(control_model_1, treatment_model_1,
+                    control_data_1, treatment_data_1,
+                    control_data_2, treatment_data_2)*(n_2/n))
   
   return (t_out)
 }
 
 
 get_tau_cross = function(data){
+  set.seed(0102)
   split_ind = sample(seq_len(nrow(data)), size = floor(0.5*nrow(data)))
   
   d1 = data[split_ind, ]
@@ -346,7 +332,6 @@ get_tau_cross = function(data){
   d2_treatment = filter(d2, Z == 1)
   d2_treatment_centered = filter(d2_centered, Z == 1)
   
-
   ctrl_model_1 = trainModel(d1_ctrl_centered)
   treatment_model_1 = trainModel(d1_treatment_centered)
   
@@ -363,7 +348,8 @@ get_tau_cross = function(data){
   
 }
 
-get_tau_cross(dParty)
+# note, this is somewhat volatile with regards to seed for data split, should we do mean of x runs? if yes, how is that treated in bootstrap(same?)
+tau_hat_all = get_tau_cross(dParty) 
 ```
 
 ```{r}
@@ -372,24 +358,45 @@ get_tau_cross(dParty)
 boostrapTau = function(data, tau_function, M){
   t = vector(, M)
   for (i in 1:M){
+    set.seed(i)
     data_sample = sample_n(data, nrow(data), replace = TRUE)
      t[i] = tau_function(data_sample)
-     
-     if (i %% 100 == 0){
-       print(i)
-     }
   }
   
   return (t)
 }
 
-bootSample = boostrapTau(dParty, get_tau_cross, 1000)
-hist(bootSample)
 ```
 
 
 
 ```{r}
-hist(bootSample)
+bootSampleAll = boostrapTau(dParty, get_tau_cross, 1000)
+```
+
+```{r}
+hist(bootSampleAll)
+ci(tau_hat_all, var(bootSampleAll))
+```
+
+
+```{r}
+runLins = function(pid){
+  data = filter(dParty, pid3 == pid)
+  tau_est = get_tau_cross(data)
+  bootSample = boostrapTau(data, get_tau_cross, 1000)
+  hist(bootSample)
+  
+  ci_boot = ci(tau_est, var(bootSample))
+  
+  return (c(tau_est, ci_boot))
+  
+}
+
+(l1 = runLins(1)) # dem
+
+# error for ind/dem because of missing levels, how should we fix that? just omit missing levels for some subsets? or do random forest regression instead of classification
+(l2 = runLins(2)) # ind
+(l3 = runLins(3)) # rep
 ```
 
